// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Preview 1`] = `
<div data-size="auto">
  <div>
    <div>
      <div>
        <ds-field>
          <label
            data-weight="medium"
            for="<removed>"
          >
            Velg fylker
          </label>
          <ds-suggestion
            data-multiple
            data-display="count"
          >
            <input
              placeholder=" "
              type="text"
              id="<removed>"
              aria-description="No selected"
              list=":u-datalist1"
              popovertarget=":u-datalist1"
            >
            <button
              aria-label="Tøm"
              hidden
              type="reset"
              aria-hidden="false"
              tabindex="-1"
            >
            </button>
            <u-datalist
              data-nofilter
              data-sr-plural="%d forslag"
              data-sr-singular="%d forslag"
              popover="manual"
              role="listbox"
              data-sr-of="of"
              hidden
              tabindex="-1"
              aria-multiselectable="true"
              id="<removed>"
              data-is-floating="true"
            >
              <u-option
                label="Agder"
                value="Agder"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Agder
              </u-option>
              <u-option
                label="Akershus"
                value="Akershus"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Akershus
              </u-option>
              <u-option
                label="Buskerud"
                value="Buskerud"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Buskerud
              </u-option>
              <u-option
                label="Finnmark"
                value="Finnmark"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Finnmark
              </u-option>
              <u-option
                label="Innlandet"
                value="Innlandet"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Innlandet
              </u-option>
              <u-option
                label="Nordland"
                value="Nordland"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Nordland
              </u-option>
              <u-option
                label="Oslo"
                value="Oslo"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Oslo
              </u-option>
              <u-option
                label="Rogaland"
                value="Rogaland"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Rogaland
              </u-option>
              <u-option
                label="Telemark"
                value="Telemark"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Telemark
              </u-option>
              <u-option
                label="Troms"
                value="Troms"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Troms
              </u-option>
              <u-option
                label="Vestland"
                value="Vestland"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Vestland
              </u-option>
              <u-option
                label="Viken"
                value="Viken"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Viken
              </u-option>
            </u-datalist>
          </ds-suggestion>
        </ds-field>
        <ds-field>
          <label
            data-weight="medium"
            for="<removed>"
          >
            Velg emner
          </label>
          <ds-suggestion
            data-multiple
            data-display="count"
          >
            <input
              placeholder=" "
              type="text"
              id="<removed>"
              aria-description="No selected"
              list=":u-datalist2"
              popovertarget=":u-datalist2"
            >
            <button
              aria-label="Tøm"
              hidden
              type="reset"
              aria-hidden="false"
              tabindex="-1"
            >
            </button>
            <u-datalist
              data-nofilter
              data-sr-plural="%d forslag"
              data-sr-singular="%d forslag"
              popover="manual"
              role="listbox"
              data-sr-of="of"
              hidden
              tabindex="-1"
              aria-multiselectable="true"
              id="<removed>"
              data-is-floating="true"
            >
              <u-option
                label="Engelsk"
                value="Engelsk"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Engelsk
              </u-option>
              <u-option
                label="Matematikk"
                value="Matematikk"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Matematikk
              </u-option>
              <u-option
                label="Hovedmål"
                value="Hovedmål"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Hovedmål
              </u-option>
              <u-option
                label="Sidemål"
                value="Sidemål"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Sidemål
              </u-option>
            </u-datalist>
          </ds-suggestion>
        </ds-field>
        <ds-field>
          <button
            data-variant="tertiary"
            type="button"
            data-size="sm"
          >
            Fjern filtre
          </button>
        </ds-field>
      </div>
      <ds-field>
        <label
          data-weight="medium"
          for="<removed>"
        >
          Søk
        </label>
        <div>
          <input
            placeholder
            aria-label="Søk"
            type="search"
            value
            id="<removed>"
          >
          <button
            data-icon="true"
            data-variant="tertiary"
            type="reset"
            aria-label="Tøm"
          >
          </button>
        </div>
      </ds-field>
    </div>
    <table
      data-zebra="true"
      data-color="neutral"
    >
      <thead>
        <tr>
          <th>
            Fylke
          </th>
          <th>
            Emne
          </th>
          <th>
            Antall elever
          </th>
          <th>
            Standpunkt
          </th>
          <th>
            Muntlig
          </th>
          <th>
            Skriftlig
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Agder
          </td>
          <td>
            Engelsk
          </td>
          <td>
            11636
          </td>
          <td>
            3.07
          </td>
          <td>
            3.57
          </td>
          <td>
            3.26
          </td>
        </tr>
        <tr>
          <td>
            Agder
          </td>
          <td>
            Matematikk
          </td>
          <td>
            14191
          </td>
          <td>
            3.72
          </td>
          <td>
            3.55
          </td>
          <td>
            3.16
          </td>
        </tr>
        <tr>
          <td>
            Agder
          </td>
          <td>
            Hovedmål
          </td>
          <td>
            12283
          </td>
          <td>
            3.81
          </td>
          <td>
            3.57
          </td>
          <td>
            3.16
          </td>
        </tr>
        <tr>
          <td>
            Agder
          </td>
          <td>
            Sidemål
          </td>
          <td>
            11861
          </td>
          <td>
            3.75
          </td>
          <td>
            3.26
          </td>
          <td>
            3.51
          </td>
        </tr>
        <tr>
          <td>
            Akershus
          </td>
          <td>
            Engelsk
          </td>
          <td>
            11538
          </td>
          <td>
            3.04
          </td>
          <td>
            3.94
          </td>
          <td>
            3.05
          </td>
        </tr>
      </tbody>
    </table>
    <div>
      <ds-pagination
        aria-label="Sidenavigering"
        data-size="sm"
        role="navigation"
      >
        <ul>
          <li>
            <button
              aria-disabled="true"
              data-variant="tertiary"
              type="button"
              aria-label="Forrige side"
            >
            </button>
          </li>
          <li>
            <button
              data-variant="tertiary"
              type="button"
              aria-current="true"
              aria-label="Side 1"
            >
              1
            </button>
          </li>
          <li>
            <button
              data-variant="tertiary"
              type="button"
              aria-label="Side 2"
            >
              2
            </button>
          </li>
          <li>
            <button
              data-variant="tertiary"
              type="button"
              aria-label="Side 3"
            >
              3
            </button>
          </li>
          <li>
            <button
              data-variant="tertiary"
              type="button"
              aria-label="Side 4"
            >
              4
            </button>
          </li>
          <li>
          </li>
          <li>
            <button
              data-variant="tertiary"
              type="button"
              aria-label="Side 10"
            >
              10
            </button>
          </li>
          <li>
            <button
              data-variant="tertiary"
              type="button"
              aria-label="Neste side"
            >
            </button>
          </li>
        </ul>
      </ds-pagination>
      <div>
        <span>
          Rad 1-5 av 48
        </span>
        <ds-field>
          <label
            data-weight="medium"
            for="<removed>"
          >
            Rader per side
          </label>
          <select
            autocomplete="off"
            id="<removed>"
          >
            <option value="5">
              5
            </option>
            <option value="10">
              10
            </option>
            <option value="25">
              25
            </option>
            <option value="50">
              50
            </option>
          </select>
        </ds-field>
      </div>
    </div>
  </div>
</div>
`;

exports[`With Dialog 1`] = `
<div data-size="auto">
  <div>
    <div>
      <ds-field>
        <label
          data-weight="medium"
          for="<removed>"
        >
          Søk
        </label>
        <div>
          <input
            placeholder
            aria-label="Søk"
            type="search"
            value
            id="<removed>"
          >
          <button
            data-icon="true"
            data-variant="tertiary"
            type="reset"
            aria-label="Tøm"
          >
          </button>
        </div>
      </ds-field>
      <div>
        <button
          data-variant="secondary"
          type="button"
          aria-haspopup="dialog"
        >
          <svg
            xmlns="http://www.w3.org/2000/svg"
            width="1em"
            height="1em"
            fill="none"
            viewbox="0 0 24 24"
            focusable="false"
            role="img"
            aria-label="Filter"
          >
            <path
              fill="currentColor"
              fill-rule="evenodd"
              d="M3.25 7A.75.75 0 0 1 4 6.25h16a.75.75 0 0 1 0 1.5H4A.75.75 0 0 1 3.25 7m3 5a.75.75 0 0 1 .75-.75h10a.75.75 0 0 1 0 1.5H7a.75.75 0 0 1-.75-.75M10 16.25a.75.75 0 0 0 0 1.5h4a.75.75 0 0 0 0-1.5z"
              clip-rule="evenodd"
            >
            </path>
          </svg>
          Filter
        </button>
        <dialog
          data-placement="center"
          data-modal="true"
          id="<removed>"
          closedby="any"
        >
          <button
            data-icon="true"
            commandfor="_r_7_"
            data-variant="tertiary"
            type="button"
            aria-label="Lukk dialogvindu"
            data-color="neutral"
            command="close"
          >
          </button>
          <div>
            <h2>
              Filter
            </h2>
            <div>
              <div>
                <fieldset aria-labelledby="<removed>">
                  <legend
                    data-weight="medium"
                    id="<removed>"
                  >
                    Karaktertype
                  </legend>
                  <ds-field data-clickdelegatefor="<removed>">
                    <input
                      type="checkbox"
                      value="skriftlig"
                      checked
                      name="checkbox-group"
                      id="<removed>"
                    >
                    <label
                      data-weight="regular"
                      for="<removed>"
                    >
                      Skriftlig
                    </label>
                  </ds-field>
                  <ds-field data-clickdelegatefor="<removed>">
                    <input
                      type="checkbox"
                      value="muntlig"
                      checked
                      name="checkbox-group"
                      id="<removed>"
                    >
                    <label
                      data-weight="regular"
                      for="<removed>"
                    >
                      Muntlig
                    </label>
                  </ds-field>
                  <ds-field data-clickdelegatefor="<removed>">
                    <input
                      type="checkbox"
                      value="standpunkt"
                      checked
                      name="checkbox-group"
                      id="<removed>"
                    >
                    <label
                      data-weight="regular"
                      for="<removed>"
                    >
                      Standpunkt
                    </label>
                  </ds-field>
                </fieldset>
              </div>
              <div>
                <ds-field>
                  <label
                    data-weight="medium"
                    for="<removed>"
                  >
                    Velg emner
                  </label>
                  <ds-suggestion
                    data-multiple
                    data-display="count"
                  >
                    <input
                      placeholder=" "
                      type="text"
                      id="<removed>"
                      aria-description="No selected"
                      list=":u-datalist3"
                      popovertarget=":u-datalist3"
                    >
                    <button
                      aria-label="Tøm"
                      hidden
                      type="reset"
                      aria-hidden="false"
                      tabindex="-1"
                    >
                    </button>
                    <u-datalist
                      data-nofilter
                      data-sr-plural="%d forslag"
                      data-sr-singular="%d forslag"
                      popover="manual"
                      role="listbox"
                      data-sr-of="of"
                      hidden
                      tabindex="-1"
                      aria-multiselectable="true"
                      id="<removed>"
                      data-is-floating="true"
                    >
                      <u-option
                        label="Engelsk"
                        value="Engelsk"
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<removed>"
                      >
                        Engelsk
                      </u-option>
                      <u-option
                        label="Matematikk"
                        value="Matematikk"
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<removed>"
                      >
                        Matematikk
                      </u-option>
                      <u-option
                        label="Hovedmål"
                        value="Hovedmål"
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<removed>"
                      >
                        Hovedmål
                      </u-option>
                      <u-option
                        label="Sidemål"
                        value="Sidemål"
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<removed>"
                      >
                        Sidemål
                      </u-option>
                    </u-datalist>
                  </ds-suggestion>
                </ds-field>
                <ds-field>
                  <label
                    data-weight="medium"
                    for="<removed>"
                  >
                    Velg fylker
                  </label>
                  <ds-suggestion
                    data-multiple
                    data-display="count"
                  >
                    <input
                      placeholder=" "
                      type="text"
                      id="<removed>"
                      aria-description="No selected"
                      list=":u-datalist4"
                      popovertarget=":u-datalist4"
                    >
                    <button
                      aria-label="Tøm"
                      hidden
                      type="reset"
                      aria-hidden="false"
                      tabindex="-1"
                    >
                    </button>
                    <u-datalist
                      data-nofilter
                      data-sr-plural="%d forslag"
                      data-sr-singular="%d forslag"
                      popover="manual"
                      role="listbox"
                      data-sr-of="of"
                      hidden
                      tabindex="-1"
                      aria-multiselectable="true"
                      id="<removed>"
                      data-is-floating="true"
                    >
                      <u-option
                        label="Agder"
                        value="Agder"
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<removed>"
                      >
                        Agder
                      </u-option>
                      <u-option
                        label="Akershus"
                        value="Akershus"
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<removed>"
                      >
                        Akershus
                      </u-option>
                      <u-option
                        label="Buskerud"
                        value="Buskerud"
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<removed>"
                      >
                        Buskerud
                      </u-option>
                      <u-option
                        label="Finnmark"
                        value="Finnmark"
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<removed>"
                      >
                        Finnmark
                      </u-option>
                      <u-option
                        label="Innlandet"
                        value="Innlandet"
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<removed>"
                      >
                        Innlandet
                      </u-option>
                      <u-option
                        label="Nordland"
                        value="Nordland"
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<removed>"
                      >
                        Nordland
                      </u-option>
                      <u-option
                        label="Oslo"
                        value="Oslo"
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<removed>"
                      >
                        Oslo
                      </u-option>
                      <u-option
                        label="Rogaland"
                        value="Rogaland"
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<removed>"
                      >
                        Rogaland
                      </u-option>
                      <u-option
                        label="Telemark"
                        value="Telemark"
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<removed>"
                      >
                        Telemark
                      </u-option>
                      <u-option
                        label="Troms"
                        value="Troms"
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<removed>"
                      >
                        Troms
                      </u-option>
                      <u-option
                        label="Vestland"
                        value="Vestland"
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<removed>"
                      >
                        Vestland
                      </u-option>
                      <u-option
                        label="Viken"
                        value="Viken"
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<removed>"
                      >
                        Viken
                      </u-option>
                    </u-datalist>
                  </ds-suggestion>
                </ds-field>
              </div>
            </div>
            <div>
              <button
                data-variant="primary"
                type="button"
              >
                Lagre
              </button>
              <button
                data-variant="secondary"
                type="button"
              >
                Avbryt
              </button>
            </div>
          </div>
        </dialog>
        <button
          data-variant="tertiary"
          type="button"
          data-size="sm"
        >
          Fjern filtre
        </button>
      </div>
    </div>
    <table
      data-zebra="true"
      data-color="neutral"
    >
      <thead>
        <tr>
          <th>
            Fylke
          </th>
          <th>
            Emne
          </th>
          <th>
            Antall elever
          </th>
          <th>
            Standpunkt
          </th>
          <th>
            Muntlig
          </th>
          <th>
            Skriftlig
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Agder
          </td>
          <td>
            Engelsk
          </td>
          <td>
            11636
          </td>
          <td>
            3.07
          </td>
          <td>
            3.57
          </td>
          <td>
            3.26
          </td>
        </tr>
        <tr>
          <td>
            Agder
          </td>
          <td>
            Matematikk
          </td>
          <td>
            14191
          </td>
          <td>
            3.72
          </td>
          <td>
            3.55
          </td>
          <td>
            3.16
          </td>
        </tr>
        <tr>
          <td>
            Agder
          </td>
          <td>
            Hovedmål
          </td>
          <td>
            12283
          </td>
          <td>
            3.81
          </td>
          <td>
            3.57
          </td>
          <td>
            3.16
          </td>
        </tr>
        <tr>
          <td>
            Agder
          </td>
          <td>
            Sidemål
          </td>
          <td>
            11861
          </td>
          <td>
            3.75
          </td>
          <td>
            3.26
          </td>
          <td>
            3.51
          </td>
        </tr>
        <tr>
          <td>
            Akershus
          </td>
          <td>
            Engelsk
          </td>
          <td>
            11538
          </td>
          <td>
            3.04
          </td>
          <td>
            3.94
          </td>
          <td>
            3.05
          </td>
        </tr>
      </tbody>
    </table>
    <div>
      <ds-pagination
        aria-label="Sidenavigering"
        data-size="sm"
        role="navigation"
      >
        <ul>
          <li>
            <button
              aria-disabled="true"
              data-variant="tertiary"
              type="button"
              aria-label="Forrige side"
            >
            </button>
          </li>
          <li>
            <button
              data-variant="tertiary"
              type="button"
              aria-current="true"
              aria-label="Side 1"
            >
              1
            </button>
          </li>
          <li>
            <button
              data-variant="tertiary"
              type="button"
              aria-label="Side 2"
            >
              2
            </button>
          </li>
          <li>
            <button
              data-variant="tertiary"
              type="button"
              aria-label="Side 3"
            >
              3
            </button>
          </li>
          <li>
            <button
              data-variant="tertiary"
              type="button"
              aria-label="Side 4"
            >
              4
            </button>
          </li>
          <li>
          </li>
          <li>
            <button
              data-variant="tertiary"
              type="button"
              aria-label="Side 10"
            >
              10
            </button>
          </li>
          <li>
            <button
              data-variant="tertiary"
              type="button"
              aria-label="Neste side"
            >
            </button>
          </li>
        </ul>
      </ds-pagination>
      <div>
        <span>
          Rad 1-5 av 48
        </span>
        <ds-field>
          <label
            data-weight="medium"
            for="<removed>"
          >
            Rader per side
          </label>
          <select
            autocomplete="off"
            id="<removed>"
          >
            <option value="5">
              5
            </option>
            <option value="10">
              10
            </option>
            <option value="25">
              25
            </option>
            <option value="50">
              50
            </option>
          </select>
        </ds-field>
      </div>
    </div>
  </div>
</div>
`;
